# rp2040-motor-controller

./: CMakeLists.txt  README.md  config.c  config.h  i2c_interface.c  i2c_interface.h  main.c  motor-controller.c  motor.c  motor.h  pid.c  pid.h  speedmeter.c  speedmeter.h  speedmeter.pio
